2009-05-02  Jan Hubicka  <jh@suse.cz>

	* except.c (remove_eh_handler_and_replace): Handle updating after
	removing TRY blocks.

2009-05-02  Eric Botcazou  <ebotcazou@adacore.com>

	* store-motion.c (compute_store_table): Add ENABLE_CHECKING guard.

2009-05-02  Steven Bosscher  <steven@gcc.gnu.org>

	* varasm.c: Do not include c-pragma.h.
	* attribs.c: Do not incude c-common.h.

2009-05-01  Michael Matz  <matz@suse.de>

	* calls.c (initialize_argument_information): Handle SSA names like
	decls with a non MEM_P DECL_RTL.

2009-05-01  Steven Bosscher  <steven@gcc.gnu.org>

	* ipa-reference.c: Do not include c-common.h, include splay-tree.h.
	* ipa-utils.c: Likewise.
	* ipa-type-escape.c: Likewise.
	* cgraphunit.c Do not include c-common.h.
	* ipa-pure-const.c: Likewise.
	* tree-if-conv.c: Likewise.
	* matrix-reorg.c: Do not include c-common.h and c-tree.h.
	* ipa-struct-reorg.c: Likewise.
	* tree-nomudflap.c: Likewise.
	* tree-ssa-structalias.c: Likewise.

2009-05-01  Steven Bosscher  <steven@gcc.gnu.org>

	* store-motion.c: Many cleanups to make this pass a first-class
	citizen instead of an appendix to gcse load motion.  Add TODO list
	to make this pass faster/cleaner/better.

	(struct ls_expr): Post gcse.c-split cleanups.
	Rename to st_expr.  Rename "loads" field to "antic_stores".  Rename
	"stores" field to "avail_stores".
	(pre_ldst_mems): Rename to store_motion_mems.
	(pre_ldst_table): Rename to store_motion_mems_table.
	(pre_ldst_expr_hash): Rename to pre_st_expr_hash, update users.
	(pre_ldst_expr_eq): Rename to pre_st_expr_eq, update users.
	(ldst_entry): Rename to st_expr_entry, update users.
	(free_ldst_entry): Rename to free_st_expr_entry, update users.
	(free_ldst_mems): Rename to free_store_motion_mems, update users.
	(enumerate_ldsts): Rename to enumerate_store_motion_mems, update caller.
	(first_ls_expr): Rename to first_st_expr, update users.
	(next_ls_expr): Rename to next_st_expr, update users.